WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259065
REGRESSION(
265833@main
): caused crashes on popular websites <
rdar://111944146
>
https://bugs.webkit.org/show_bug.cgi?id=259065
Summary
REGRESSION(265833@main): caused crashes on popular websites <rdar://111944146>
WebKit Commit Bot
Reported
2023-07-10 12:13:25 PDT
https://commits.webkit.org/265833@main
introduced a regression: caused crashes on popular websites <
rdar://111944146
> This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 265833@main
(8.39 KB, patch)
2023-07-10 12:13 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2023-07-10 12:13:31 PDT
Created
attachment 467006
[details]
REVERT of
265833@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Justin Michaud
Comment 2
2023-07-10 12:15:40 PDT
rdar://111944146
EWS
Comment 3
2023-07-10 12:17:58 PDT
Committed
265913@main
(a97375624ef5): <
https://commits.webkit.org/265913@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467006
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug