Cherry-pick a97375624ef5. rdar://problem/111944146

Unreviewed, reverting 265833@main.
    https://bugs.webkit.org/show_bug.cgi?id=259065

    caused crashes on popular websites <rdar://111944146>

    Reverted changeset:

    "DFG should update backwards propogation after fixup."
    https://bugs.webkit.org/show_bug.cgi?id=257949
    https://commits.webkit.org/265833@main

    Canonical link: https://commits.webkit.org/265913@main

Identifier: 264815.1074@safari-7616-branch