Source/JavaScriptCore/dfg/DFGStrengthReductionPhase.cpp
@@ -114,10 +114,6 @@ private:
                 m_changed = true;
                 break;
             }
-            if (bytecodeCanTruncateInteger(m_node->arithNodeFlags())) {
-                m_node->convertToIdentity();
-                m_changed = true;
-            }
             break;
             
         case ArithAdd:
